patch MetFragConfig, added RMB_EIC_prescreen
fixed adduct check in MetFragConfig, added RMB_EIC_prescreen, v0.1.7

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@
 .Rproj.user/63653538/sdb/prop/INDEX
 .Rproj.user/63653538/session-persistent-state
 .Rproj.user/shared/notebooks/paths
+.Rproj.user
