--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: ReSOLUTION
 Type: Package
 Title: SOLUTIONS for High ReSOLUTION Mass Spectrometry
-Version: 0.1.6
+Version: 0.1.7
 Date: 2018-05-04
 Authors@R: c(
 	person(given="Emma L.", family="Schymanski", email="emma.schymanski@uni.lu", role=c("aut","cre")),
@@ -44,4 +44,5 @@ Collate:
 	'MetFragInterpreteR.R'
 	'MetFragConfigR.R'
 	'processSDF.R'
+	'RMB_EIC_prescreen.R'
 RoxygenNote: 5.0.1
