--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(MetFragConfig)
 export(MetFragConfig.CompToxCSV)
 export(MetFragConfig.CompToxExportSDF)
 export(MetFragConfig.formula)
+export(RMB_EIC_prescreen)
 export(SpecComp.OrgMassSpecR)
 export(addMissingInChIKeys.CSV)
 export(addStructToPlot)
